--- a/lyricist/lyricist.ipynb
+++ b/lyricist/lyricist.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "946a467d",
+   "id": "4c593bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b99f8e6",
+   "id": "ca49aea0",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3005a791",
+   "id": "4742b292",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "842a51f2",
+   "id": "07eca9d1",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4e4e3ebd",
+   "id": "14f879c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6e605809",
+   "id": "8ffc36df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0eb574d0",
+   "id": "aef96258",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "df6d9c7e",
+   "id": "819fa987",
    "metadata": {
     "scrolled": false
    },
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4119ece1",
+   "id": "8a576bf3",
    "metadata": {
     "scrolled": true
    },
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c88aad89",
+   "id": "0293ddfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "377056be",
+   "id": "4716da7c",
    "metadata": {
     "scrolled": false
    },
@@ -282,17 +282,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a56133ee",
+   "cell_type": "markdown",
+   "id": "4941b5b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 결론\n",
+    "### 마지막 루브릭인 loss 2.2이하 달성이 쉽지 않았습니다. 트레인셋 loss는 1.0이하로 떨어졌지만 테스트셋은 2.4이상의 과적합이 발생하였습니다\n",
+    "### embedding size와 word size를 늘려도 과적합을 줄이기 힘들었습니다. 때문에 rnn레이어를 쌓아보았고, 이때 embedding size를 같이 늘려주면 과적합이 줄어드는 것을 파악했습니다.\n",
+    "### 하지만 목표한 loss 2.2이하를 달성하기 힘들었고 초기 모델에서 에폭을 30이상 주었기 때문에 여기서 과적합을 피하기 어려웠다는 판단을 했습니다.\n",
+    "### 최종적으로 레이어와 embedding size를 늘려주고 에폭을 적절히 줄여주었을 때 loss 2.2 이하를 달성할 수 있었습니다.\n",
+    "### 다만 여전히 자연스러운 문장을 출력하기는 힘들었습니다. 테스트 셋 loss가 0.8이하로 떨어지면 가능해 보이지만 모델의 학습시간이 오래 걸려 실험해보기는 어려웠습니다."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81e771a",
+   "id": "ee0d2578",
    "metadata": {},
    "outputs": [],
    "source": []
